--- a/BlackBoard/Views/Students/Details.cshtml
+++ b/BlackBoard/Views/Students/Details.cshtml
@@ -43,5 +43,9 @@
 </div>
 <div>
     <a asp-action="Activity" asp-route-id="@Model.AUID">See student course activity</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> <br/>
+
+    
+    
+
 </div>
