--- a/BlackBoard/Views/Shared/_Layout.cshtml
+++ b/BlackBoard/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Assignment" asp-action="Index">Assignments</a>
+                        </li>
                     </ul>
                 </div>
             </div>
