--- a/BlackBoard/Views/Assignment/Index.cshtml
+++ b/BlackBoard/Views/Assignment/Index.cshtml
@@ -34,7 +34,10 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @if (Model != null)
+        {
+            foreach (var item in Model)
+            {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.HandinDeadline)
@@ -62,6 +65,7 @@
             </td>
 
         </tr>
-}
+            }
+        }
     </tbody>
 </table>
