--- a/BlackBoard/Views/Assignment/Create.cshtml
+++ b/BlackBoard/Views/Assignment/Create.cshtml
@@ -18,27 +18,19 @@
                 <span asp-validation-for="HandinDeadline" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Attempt" class="control-label"></label>
-                <input asp-for="Attempt" class="form-control" />
-                <span asp-validation-for="Attempt" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Grade" class="control-label"></label>
-                <input asp-for="Grade" class="form-control" />
-                <span asp-validation-for="Grade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="ParticipantsAllowed" class="control-label"></label>
                 <input asp-for="ParticipantsAllowed" class="form-control" />
                 <span asp-validation-for="ParticipantsAllowed" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TeacherAUID" class="control-label"></label>
-                <select asp-for="TeacherAUID" class ="form-control" asp-items="ViewBag.TeacherAUID"></select>
+                <input asp-for="TeacherAUID" class="form-control" />
+                <span asp-validation-for="TeacherAUID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CourseName" class="control-label"></label>
-                <select asp-for="CourseName" class ="form-control" asp-items="ViewBag.CourseName"></select>
+                <input asp-for="CourseName" class="form-control" />
+                <span asp-validation-for="CourseName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
