--- a/BlackBoard/Views/Assignment/GradeAssignment.cshtml
+++ b/BlackBoard/Views/Assignment/GradeAssignment.cshtml
@@ -12,13 +12,13 @@
     <div class="col-md-4">
         <form asp-action="GradeAssignment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            <input type="hidden" asp-for="AssignmentId" />
+
             <div class="form-group">
                 <label asp-for="Grade" class="control-label"></label>
                 <input asp-for="Grade" class="form-control" />
                 <span asp-validation-for="Grade" class="text-danger"></span>
             </div>
-            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -30,6 +30,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
