--- a/BlackBoard/Views/Courses/Index.cshtml
+++ b/BlackBoard/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<BlackboardDatabase.Models.Course>
+﻿@model IEnumerable<BlackboardDatabase.Models.Course>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,7 +12,7 @@
     <thead>
         <tr>
             <th>
-                Course Name   
+                @Html.DisplayNameFor(model => model.CourseName)
             </th>
         </tr>
     </thead>
@@ -26,7 +26,7 @@
             <a asp-action="DetailsTeachers" asp-route-id="@item.CourseName">Teachers</a> |
             <a asp-action="DetailsStudents" asp-route-id="@item.CourseName">Students</a> |
             <a asp-action="AddStudent" asp-route-id="@item.CourseName">Add Student</a> |
-            <a asp-action="CourseContent" asp-route-id="@item.CourseName">CourseContent</a> 
+            <a asp-controller="CourseContents" asp-action="Index" asp-route-id="@item.CourseName">CourseContent</a> 
         </td>
     </tr>
 }
