--- a/BlackBoard/Views/Students/Index.cshtml
+++ b/BlackBoard/Views/Students/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IQueryable<BlackboardDatabase.Models.Student>
+﻿@model IEnumerable<BlackboardDatabase.Models.Student>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,19 +13,19 @@
     <thead>
     <tr>
         <th>
-            AUID
+            @Html.DisplayNameFor(model => model.AUID)
         </th>
         <th>
-            Name
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            BirthDate
+            @Html.DisplayNameFor(model => model.BirthDate)
         </th>
         <th>
-            EnrollmentDate
+            @Html.DisplayNameFor(model => model.EnrollmentDate)
         </th>
         <th>
-            GraduationDate
+            @Html.DisplayNameFor(model => model.GraduationDate)
         </th>
         <th></th>
     </tr>
