Tilføjet course content

--- a/BlackBoard/Views/CourseContents/Index.cshtml
+++ b/BlackBoard/Views/CourseContents/Index.cshtml
@@ -1,29 +1,37 @@
-﻿@model IEnumerable<BlackboardDatabase.Models.CourseContent>
+﻿@model BlackboardDatabase.Models.CourseContent
 
 @{
     ViewData["Title"] = "CourseContent";
 }
+<h2>Course Content information</h2>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Course)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CourseName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CourseContentId)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Course.CourseName)
+                @Html.DisplayFor(model => model.CourseName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CourseContentId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CourseContentId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CourseContentId">Delete</a>
+                @Html.DisplayFor(model => model.CourseContentId)
             </td>
+            
         </tr>
-}
+    
+    
     </tbody>
+    
 </table>
+
+<div>
+    <a asp-action="Folders" asp-route-courseContentId="@Model.CourseContentId">See Folders</a>
+</div>
